oddity: needed to instance led as DIO.DOUT not Components.CDH.DIO.DOUT

--- a/Components/CMakeLists.txt
+++ b/Components/CMakeLists.txt
@@ -1,4 +1,12 @@
 # Include project-wide components here
 
 # add_fprime_subdirectory("${CMAKE_CURRENT_LIST_DIR}/MyComponent")
-add_fprime_subdirectory("${CMAKE_CURRENT_LIST_DIR}/CDH/DIO/DOUT/")
+add_fprime_subdirectory("${CMAKE_CURRENT_LIST_DIR}/BEH/")
+add_fprime_subdirectory("${CMAKE_CURRENT_LIST_DIR}/CDH/")
+add_fprime_subdirectory("${CMAKE_CURRENT_LIST_DIR}/COM/")
+add_fprime_subdirectory("${CMAKE_CURRENT_LIST_DIR}/EPS/")
+add_fprime_subdirectory("${CMAKE_CURRENT_LIST_DIR}/GNC/")
+add_fprime_subdirectory("${CMAKE_CURRENT_LIST_DIR}/MECH/")
+add_fprime_subdirectory("${CMAKE_CURRENT_LIST_DIR}/PAYLOAD/")
+add_fprime_subdirectory("${CMAKE_CURRENT_LIST_DIR}/PROP/")
+add_fprime_subdirectory("${CMAKE_CURRENT_LIST_DIR}/TCS/")
